--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,6 @@
 spring:
-  sql:
-    init:
-      mode: never
   datasource:
-    url: jdbc:mysql://localhost:3306/openppm?useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://mysql-db/openppm?useSSL=false&allowPublicKeyRetrieval=true
     username: root
     password: 123456789
     #url: ${DB_URL}
