--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://mysql-db/openppm?useSSL=false&allowPublicKeyRetrieval=true
-    username: root
-    password: 123456789
-    #url: ${DB_URL}
-    #username: ${MYSQL_USERNAME}
-    #password: ${MYSQL_ROOT_PASSWORD}
+    url: jdbc:mysql://${db.host}:3306/${db.name}?useSSL=false&allowPublicKeyRetrieval=true
+    username: ${db.user}
+    password: ${db.password}
     driverClassName: com.mysql.cj.jdbc.Driver
 
   jpa:
