--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 spring:
   datasource:
-    url: jdbc:mysql://${db.host}:3306/${db.name}?useSSL=false&allowPublicKeyRetrieval=true
-    username: ${db.user}
-    password: ${db.password}
-    #url: ${DB_URL}
-    #username: ${MYSQL_USERNAME}
-    #password: ${MYSQL_ROOT_PASSWORD}
+    #url: jdbc:mysql://${db.host}:3306/${db.name}?useSSL=false&allowPublicKeyRetrieval=true
+    #username: ${db.user}
+    #password: ${db.password}
+    url: jdbc:mysql://localhost:3306/openppm
+    username: root
+    password: 123456789
     driverClassName: com.mysql.cj.jdbc.Driver
 
   jpa:
