--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://${db.host}:3306/${db.name}?useSSL=false&allowPublicKeyRetrieval=true
-    username: ${db.user}
-    password: ${db.password}
+    url: jdbc:mysql://rds-ms-openppm-dev-cluster.cluster-cbtcsp2fo97t.us-east-1.rds.amazonaws.com:3306/openppm?useSSL=false&allowPublicKeyRetrieval=true
+    username: openppm
+    password: x0tr.u21O
     #url: jdbc:mysql://localhost:3306/openppm
     #username: root
     #password: 123456789
